# substrate-offchain-worker-demo

./: .editorconfig  .gitignore  README.md
docs/: README.md  http-json.md  storage.md  transactions.md
node/: Cargo.toml
node/src/: service.rs
pallets/ocw/: Cargo.toml
pallets/ocw/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
