[package]
name = "pallet-ocw"
version = "1.0.0"
edition = "2018"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = "https://github.com/jimmychu0807/substrate-offchain-worker-demo"
description = "A pallet that demonstrates off-chain workers feature in Substrate"
license = "GPL-3.0-or-later"

[package.metadata.substrate]
categories = [
	"pallet",
	"offchain worker",
]

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
log = { version = "0.4.14", default-features = false }
parity-scale-codec = { default-features = false, features = ['derive'], version = '2.0.0' }
parking_lot = "0.11"
scale-info = { default-features = false, features = ['derive'], version = '1.0' }
serde = { version = '1.0.130', default-features = false, features = ['derive'] }
serde_json = { version = '1.0.67', default-features = false, features = ['alloc'] }

# Substrate packages

frame-support = { git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-10', version = '4.0.0-dev', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-10', version = '4.0.0-dev', default-features = false }
sp-arithmetic = { git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-10', version = '4.0.0-dev', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-10', version = '4.0.0-dev', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-10', version = '4.0.0-dev', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-10', version = '4.0.0-dev', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-10', version = '4.0.0-dev', default-features = false }

[features]
default = ['std']
std = [
	'frame-support/std',
	'frame-system/std',
	'log/std',
	'parity-scale-codec/std',
	'sp-arithmetic/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
]
try-runtime = ["frame-support/try-runtime"]
